--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -1,1 +1,23 @@
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import "tailwindcss";
+
+@utility font-fira-sans{
+    font-family: "Fira Sans", sans-serif;
+}
+
+.animated-orbs{
+    animation: orbs 3s linear infinite;
+}
+
+@keyframes orbs {
+    0%{
+        width: 500px;
+        height: 500px;
+    }50%{
+        width: 450px;
+        height: 450px;
+    }100%{
+        width: 500px;
+        height: 500px;
+    }
+}
